fixed navbar so that it isn't covered

--- a/app/assets/stylesheets/components/_top-navbar.scss
+++ b/app/assets/stylesheets/components/_top-navbar.scss
@@ -9,6 +9,7 @@
   transition: top 0.3s;
   width: 100%;
   position: fixed;
+  z-index: 100;
 
   .top-links {
     display: flex;
@@ -38,5 +39,4 @@
       margin-left: 10px;
     }
   }
-
 }
